	- HTMLDOC now breaks between images that are too large
	  to fit on a single line, to match the behavior of
	  Mozilla/Netscape (STR #7).
	- HTMLDOC now handles XHTML input more cleanly.
	- HTMLDOC no longer specifies an interpolation
	  preference for images in PostScript or PDF output (STR
	  #8)
	- The DT element no longer applies an italic style (PR
	  #5178)

    BUG FIXES

	- Switching between landscape and portrait orientations
	  would cause margin creepage.
	- Images did not default to align=bottom, and the
	  align=bottom line spacing calculation was incorrect.
	- Whitespace before a link was underlined.
	- Fixed a table column sizing bug.
	- HTMLDOC didn't read back the HTTP response properly in
	  all situations.
	- Fixed some more PNG transparency cases.
	- The PageBoundingBox comments in PostScript output did
	  not account for the back page when duplexing was
	  enabled.
	- HTMLDOC generated an incorrect image mask for some
	  images.
	- The first page of each chapter did not use the custom
	  page number if it was placed inside the heading.
	- HTMLDOC did not reset the rendering cache before each
	  page when producing N-up output; this caused font
	  errors in some cases that prevented the document from
	  printing or displaying properly.
	- Eliminated a common cause of "table too wide"
	  formatting errors,
	- Fixed a bug when applying a table background color to
	  a cell without a border that cross a page boundary.
	- Fixed some calls to strcpy with overlapping arguments.
	- The names object was never set when the name objects
	  were written.
	- Character entities were not decoded/encoded inside
	  HTML comments.
	- The current heading was not always correctly
	  substituted when used in the page header or footer.
	- When converting web pages from the GUI, the
	  table-of-contents page number preferences were
	  incorrectly used.
	- PDF page effects/transitions were not put in the right
	  part of the page dictionary, causing them not to be